<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditIngredients">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editIngredient"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginBottom="284dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginTop="256dp"
        android:background="@color/black_overlay"
        android:ems="10"

        android:inputType="text|textPersonName"
        android:text="@string/ingredient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button-recipes" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:layout_marginBottom="192dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/edit_the_ingredient"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:layout_marginBottom="192dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/delete_the_ingredient"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Back"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>