<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EditRecipe">

    <EditText
        android:id="@+id/editRecipeName"
        android:layout_width="289dp"
        android:layout_height="43dp"
        android:layout_marginBottom="492dp"
        android:layout_marginTop="256dp"
        android:background="@color/black_overlay"
        android:ems="10"
        android:inputType="text|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button-recipes" />

    <EditText
        android:id="@+id/editRecipe"
        android:layout_width="289dp"
        android:layout_height="267dp"
        android:layout_marginBottom="212dp"
        android:layout_marginTop="256dp"
        android:background="@color/black_overlay"
        android:ems="10"
        android:inputType="text|textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button-recipes" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:layout_marginBottom="108dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/edit_the_recipe"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:layout_marginBottom="108dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/delete_the_recipe"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="182dp"
        android:layout_height="92dp"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Back"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>